--- a/public/css/livre.css
+++ b/public/css/livre.css
@@ -19,7 +19,7 @@
         justify-content: center;
     }
     
-    form {
+    .form {
         width: 100%;
         max-width: 400px;
         background-color: rgba(255, 255, 255, 0.9);
